--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-project-message": "^9.4",
         "drupal/core-recommended": "^9.4",
-        "drupal/core-vendor-hardening": "^9.4"
+        "drupal/core-vendor-hardening": "^9.4",
+        "drupal/linked_field": "^1.5"
     },
     "conflict": {
         "drupal/drupal": "*"
