--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "ext-gd": "*",
         "composer/installers": "^1.9",
+        "drupal/adsense": "1.3",
         "drupal/better_exposed_filters": "^6.0",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-project-message": "^9.4",
